Wed Jun 23 13:30:30 2011  Shota Fukumori  <sorah@tubusu.net>

	* signal.c(ruby_atomic_exchange): Fix definition style.

Wed Jun 22 22:34:05 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/ossl_ssl.c (ossl_sslctx_session_new_cb): Return 0 to
	  OpenSSL from the callback for SSL_CTX_sess_set_get_cb().
	  Returning 0 means to OpenSSL that the the session is still valid
	  (since we created Ruby Session object) and was not freed by us with
	  SSL_SESSION_free(). Call SSLContext#remove_session(sess) in
	  session_get_cb block if you don't want OpenSSL to cache the session
	  internally.
	  This potential issue was pointed by Ippei Obayashi. See #4416.

	* test/openssl/test_ssl_session.rb (test_ctx_server_session_cb): Test
	  it.

Wed Jun 22 22:21:17 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_ssl_session.c: Respect T_BIGNUM time values. Patch by
	  Tomoyuki Chikanaga.
	  [ Ruby 1.9 - Bug #4919 ] [ruby-dev:43869]

Wed Jun 22 21:29:25 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/socket/depend (SOCK_HEADERS): use $(top_srcdir) instaed of
	  $(topdir). sorry!

Wed Jun 22 19:47:03 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* cont.c (cont_capture): add volatile.
	  On clang -O, it is needed to avoid the optimization.
	  With this and llvm/clang's recent fix, clang 3.0 can
	  build ruby-trunk with -O option.

	* cont.c (cont_capture): use for-loop.

	* array.c (rb_ary_each): add volatile and use it.

	* vm_insnhelper.c (vm_call_cfunc): ditto.

Wed Jun 22 18:20:46 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/ossl_ssl.c (ossl_sslctx_session_remove_cb):
	  OpenSSL::SSL::SSLContext#session_remove_cb was broken. It wrongly
	  tried to call the session_*new*_cb callback.

	* test/openssl/test_ssl_session.rb (class OpenSSL): Test it.

Wed Jun 22 17:37:49 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl.h: Introduced OSSL_BIO_reset macro for PEM/DER
	  fallback scenarios.
	